[package]
name = "blink-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "*"
defmt-rtt = "*"
cortex-m-rt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }

embassy-stm32 = { version = "0.1.0", path = "/Users/tosha/workspace/3rdparty/embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f303xc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.3.3", path = "/Users/tosha/workspace/3rdparty/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", path = "/Users/tosha/workspace/3rdparty/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }


[profile.release]
strip = true
