[package]
name = "blink-rtic"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "*"
defmt-rtt = "*"
cortex-m-rt = "*"
panic-probe = { version = "*", features = ["print-defmt"] }

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "1.0.0"
features = ["cortex-m-systick"]

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.9.2"

[profile.release]
strip = true
